Sat Mar 13 15:19:17 2004  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkwindow.c (gtk_window_destroy): Remove
	the window from the toplevel_list here rather in destroy.
	While this is theoretically speaking wrong, it fits
	in better with the current reality that destroyed
	widgets are not reusable. (#126808, Michael Natterer)

Sat Mar 13 21:47:47 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkcellview.c (gtk_cell_view_expose): Don't do anything
	beyond clearing to the background if there is no active row.
	(#137066, reported by Owen Taylor)

Sat Mar 13 21:37:44 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkcombobox.c (gtk_combo_box_list_key_press): Pop down the
	list when an item is selected via the keyboard.

2004-03-13  Anders Carlsson  <andersca@gnome.org>

	* gtk/gtkfilesystemunix.c: (remove_trailing_slash),
	(gtk_file_system_unix_get_folder),
	(gtk_file_system_unix_create_folder), (get_parent_dir),
	(gtk_file_system_unix_get_parent), (gtk_file_folder_unix_get_info):
	Remove trailing slashes in path names.
	
Sat Mar 13 12:17:16 2004  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkwindow-x11.c (gdk_window_reparent): Make
	this a total no-op when the new or old parent is
	destroyed. (#134230, patch from Soeren Sandmann)

	* gdk/gdkwindow.c (_gdk_window_destroy_hierarchy):
	For foreign windows in our heirarchy, call
	_gdk_windowing_window_destroy_foreign (window) and skip
	all the normal destruction logic.

	* gdk/x11/gdkwindow-x11.c gdk/win32/gdkwindow-win32.c:
	Move code to request destruction of a foreign window
	code into a separate _gdk_windowing_window_destroy_foreign().

	* gdk/x11/gdkwindow-x11.c (gdk_window_impl_x11_finalize):
	Call GDK_WINDOW_DISPLAY() on the wrapper not on the
	impl. (Also from Soeren's patch)

Sat Mar 13 10:49:46 2004  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkdnd.c (_gtk_drag_dest_handle_event): For
	GTK_IS_PLUG toplevels, call gdk_window_get_origin() 
	not gtk_window_get_position, as a hackround for not